static/css/main.css
/* ... */
header.global ol.user > li.primary > a > span.avatar {
    display: none;
}

/* ==========================================================================
   Dashboard
   ========================================================================== */

section.dashboard section.profile-sidebar {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;

    width: 22%;
    margin: 0;
    padding-right: 15px;
}

section.dashboard section.profile-sidebar header.profile {
    display: none;
}

section.dashboard section.profile-sidebar section.user-info {
    border: 0 none;
    padding: 0;
}

section.dashboard section.profile-sidebar section.user-info > ul {
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;

    background: none;
    border: 0 none;
    padding: 0 10px 10px
}

section.dashboard section.profile-sidebar section.user-info > ul > li {
    border: 0 none;
    padding: 0;
    margin: 0 0 20px 0;
}

section.dashboard section.my-courses {
    width: 78%;
    margin: 0;
}

section.dashboard section.my-courses > header {
    border: 0 none;
}

section.dashboard section.my-courses .listing-courses .course-item {
    border: 0 none;
    padding: 0;
    margin: 0 0 80px;
}

section.dashboard section.my-courses .listing-courses .course-item .cover {
    -webkit-border-radius: 4px;
    border-radius: 4px;
    background-color: white;
    height: auto;
}

section.dashboard section.my-courses .listing-courses .course-item .cover img {
    width: 200px;
    height: 112px;
}

section.dashboard section.my-courses .listing-courses .course-item .cover .cover-course-status {
    text-align: center;
    font-size: 14px;
    padding: 2px 0;
    font-weight: bold;
}

section.dashboard section.my-courses .listing-courses .course-item .cover .cover-course-status.course-open {
    color: #2ecc71;
}

section.dashboard section.my-courses .listing-courses .course-item .cover .cover-course-status.course-ended {
    color: #c0392b;
}

section.dashboard section.my-courses .listing-courses .course-item .cover .cover-course-status.course-soon {
    color: #bdc3c7;
}

section.dashboard section.my-courses .listing-courses .course-item .cover .cover-university {
    padding: 2px 0;
    background-color: #0f70b7;
    background-color: white;
    color: white;
    color: #3ea5ce;
    text-align: center;
    font-weight: bold;
}

section.dashboard section.my-courses .listing-courses .course-item .info h4 {
    font-size: 18px;
}

section.dashboard section.my-courses .listing-courses .course-item .info hr {
    border-color: #ddd;
}

section.dashboard section.my-courses .listing-courses .course-item .info .unregister {
    font-family: FontAwesome;
    position: absolute;
    top: 0;
    right: 10px;
    color: #c0392b;
    font-size: 20px;
    font-style: normal;
    font-weight: normal;
    text-decoration: none;
    margin: 0;
    float: none;
}

section.dashboard section.my-courses .listing-courses .course-item .info .unregister:before {
    content: "\f00d";
}

section.dashboard section.my-courses .listing-courses .course-item .info p {
    height: 59px;
}

section.dashboard section.my-courses .listing-courses .course-item .info .enter-course {
    -webkit-border-radius: 4px;
    border-radius: 4px;

    box-shadow: none;
    text-shadow: none;
    background: none;
    background-color: #2ecc71;
    border: 1px solid transparent;
    color: white;
}

section.dashboard section.my-courses .listing-courses .course-item .info .enter-course:hover {
    box-shadow: none;
    text-shadow: none;
    background: none;
    background-color: white;
    border: 1px solid #2ecc71;
    color: #2ecc71;
}

section.dashboard section.my-courses .empty-dashboard-message {
    padding: 20px 0;
}

section.dashboard section.my-courses .empty-dashboard-message > a {
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;

    margin: 0;
    padding: 8px 12px;
    background-color: #fff;
    border-color: #ddd;
}

/* ==========================================================================
   Course about page
   ========================================================================== */

section.course-info header.course-profile {
    background-color: #3ea5ce;
    border: 0 none;
    box-shadow: none;
    height: auto;
    padding: 80px 0;
}

section.course-info header.course-profile .intro-inner-wrapper {
    max-width: 1170px;
    box-shadow: none;
    border: 0 none;
    padding: 0 15px;
    background: none;
}

section.course-info header.course-profile .intro-inner-wrapper .table {
    background: #eef0f1;
}

section.course-info header.course-profile .intro-inner-wrapper .intro > hgroup {
    padding-bottom: 0;
    border: 0 none;
    box-shadow: none;
    margin-bottom: 30px;
}

section.course-info header.course-profile .intro-inner-wrapper .intro > hgroup > .info {
    margin: 10px 0 5px 0;
}

section.course-info header.course-profile .intro-inner-wrapper .intro > hgroup > .info > .course-id {
    border-right: 1px solid #ddd;
    padding-right: 14px;
    margin-right: 10px;
}

section.course-info header.course-profile .intro-inner-wrapper .media .hero img {
    width: 343px;
    height: 193px;
}

section.course-info header.course-profile .intro-inner-wrapper .intro .main-cta strong,
section.course-info header.course-profile .intro-inner-wrapper .intro .main-cta a.register {
    border: 0 none;
    background: none;
    box-shadow: none;
    text-shadow: none;
    background-color: #0f70b7;
    padding: 11px 0 10px 0;
}

section.course-info header.course-profile .intro-inner-wrapper .intro .main-cta strong:hover:not(:disabled),
section.course-info header.course-profile .intro-inner-wrapper .intro .main-cta a.register:hover:not(:disabled) {
    background: none;
    background-color: #0f70b7;
}
/* ... */

